overflow bug resolve

--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
+ *{
+    overflow-x: hidden;
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  
+
 p{
     color: white;
     text-align: center;
     font-family:'Times New Roman';
 }
 header{
-    position: sticky;
-    top: 0px;
+    position:fixed;
+    /* top: 0px; */
     background-color: black;
     color: red;
     width: 100vw;
@@ -23,20 +33,24 @@ header{
 .image{
     display: grid;
     place-items: center;
-    height: 80vh;
+    height: 95vh;
     width: 100vw;
+    font-style: oblique;
     /* background-image: url(black.jpeg); */
-    background-size: cover;
+    /* background-size: cover; */
     background-color: black;
 }
 @media (min-width : 600px) {
     .image{
         width:100vw;
+        height: 100vh;
+        font-style: oblique;
+        font-size: xx-large;
     }
     }
 .education{
     color:red;
-    font-size: large;
+    font-size:larger;
     height: 85vh;
     width: 100vw;
 }
@@ -69,7 +83,7 @@ span{
     font-size: x-large;
     border: 4px solid black;
     position: absolute;
-    left: 90px;
+    left: 75px;
 }
 footer{
     background-color: white;
@@ -100,6 +114,7 @@ figure{
     display: grid;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .welcome{
@@ -109,12 +124,15 @@ figure{
 @keyframes animate{
     0%{
         transform: translate(75vw);
-        color: white;
+        color: red;
     }
     50%{
-        color: pink;
+        color: red;
+        transform: skew(-45deg);
     }
     100%{
         color: red;
+        transform: skew(0deg);
     }
 }
+
